# spl-token-registry

./: .gitignore  README.md
demo/: package-lock.json  package.json
demo-anchor/: package-lock.json
demo-anchor/src/: index.css
demo-anchor/src/common/: StyledSelect.tsx  colors.ts
demo/public/: index.html
demo/public/assets/: logo4.ai
demo/src/: index.css  routes.tsx
demo/src/api/: PendingTokenInfo.ts  PendingTokenInfos.ts  TokenInfo.ts  anchor_api.ts  api.ts  spl_token_registry.json  utils.ts
demo/src/common/: Buttons.tsx  Connection.tsx  EndpointSelector.tsx  EnvironmentProvider.tsx  ErrorBoundary.tsx  ErrorProvider.tsx  Initialized.tsx  LoadingBoundary.tsx  Notification.tsx  StyledContainer.tsx  StyledError.tsx  StyledSelect.tsx  StyledTokenInfo.tsx  VotingPower.tsx  WithHeader.tsx  notifications.tsx
demo/src/registry/: Propose.tsx  Registry.tsx  Voting.tsx
program/: .gitignore  Anchor.toml  Cargo.toml
program-anchor/: Anchor.toml
program-anchor/programs/program-anchor/src/: lib.rs
program-anchor/tests/: program-anchor.js
program/client/: package-lock.json  package.json
program/client/src/: App.js  idl.json
program/programs/program-anchor/: Cargo.toml
program/programs/program-anchor/src/: lib.rs
program/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
program/tests/: package-lock.json  program-anchor.js
ui/: asset-manifest.json
ui/static/js/: 3.8e712ac6.chunk.js.map  main.ba40633b.chunk.js  main.ba40633b.chunk.js.map
